tests/ui/generator/retain-resume-ref.drop_tracking_mir.stderr
error[E0499]: cannot borrow `thing` as mutable more than once at a time
  --> $DIR/retain-resume-ref.rs:27:25
   |
LL |     gen.as_mut().resume(&mut thing);
   |                         ---------- first mutable borrow occurs here
LL |     gen.as_mut().resume(&mut thing);
   |                         ^^^^^^^^^^ second mutable borrow occurs here
LL |
LL | }
   | - first borrow might be used here, when `gen` is dropped and runs the destructor for generator

error: aborting due to previous error

For more information about this error, try `rustc --explain E0499`.
